--- a/styles.css
+++ b/styles.css
@@ -228,4 +228,139 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  html {
+    /* border: 3px solid purple; */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  body {
+    /* border: 3px solid green; */
+    background-image: url("");
+    background-color: rgb(5, 58, 88);
+    background-repeat: no-repeat;
+    color: white;
+    /* overflow: hidden; */
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .content-container {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .temperature-container {
+    /* border: 2px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin-top: 1rem;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .center-temp-content {
+    /* border: 2px solid green; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 20px;
+    width: 150px;
+
+    /* width: 10vw; */
+    /* min-width: 80px; */
+  }
+
+  .right-container {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    margin-bottom: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left-temp-content {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+  }
+
+  .day-hour-container {
+    /* border: 1px solid red; */
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid fuchsia; */
+    gap: 10px;
+    height: 30vh;
+  }
+
+  .day-hour {
+    /* border: 2px solid green; */
+    display: flex;
+    gap: 30px;
+    padding-left: 10px;
+    margin-top: 3rem;
+  }
+
+  .day-active,
+  .hour-active {
+    /* border: 2px solid black; */
+    border-radius: 5px;
+    width: 50px;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 1em;
+  }
+
+  .card-container {
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+  }
+
+  .day-cards-container-active {
+    /* border: 2px solid green; */
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 5em;
+    /* width: 80vw; */
+    align-items: center;
+  }
+
+  .hour-cards-container-active {
+    /* border: 2px solid green; */
+    padding-left: 10px;
+    margin-bottom: 3rem;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer {
+    display: none;
+  }
 }
